--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
   </header>
 
   <section class="hero">
-    <div class="container">
-
-
-<h2>About Us</h2>
+  <div class="container about-section">
+    <h2>About Us</h2>
     <p>
       Based in Assam, <strong>Air Leaf Tech Pvt. Ltd.</strong> provides cutting-edge software solutions tailored for the pharmaceutical industry and individual professionals. 
       We are passionate about helping pharma businesses digitize their operations with tools designed to enhance efficiency, reporting, and inventory tracking.
@@ -42,16 +40,12 @@
       <li>✔ Healthcare Startups</li>
     </ul>
 
+    <h2>Empower Your Business with Our Software Solutions</h2>
+    <p>We offer powerful and easy-to-use tools to manage your business efficiently.</p>
+    <a href="products.html" class="btn">View Products</a>
+  </div>
+</section>
 
-
-
-
-      
-      <h2>Empower Your Business with Our Software Solutions</h2>
-      <p>We offer powerful and easy-to-use tools to manage your business efficiently.</p>
-      <a href="products.html" class="btn">View Products</a>
-    </div>
-  </section>
 
   <footer>
     <p>&copy; 2025 Airs Leaf Tech Pvt. Ltd. All rights reserved.</p>
